# AMOS-Code

./: .amos_cognitive_audit.jsonl  .amos_deployment_report.json  .amos_heal_report.json  .amos_repo_doctor_report.json  .axiom_system_graph.dot  .axiom_system_graph.json  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .jscpd.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  6REPOS_USAGE_SUMMARY.md  6repo_complete_demo.py  6repo_demo_final.py  6repo_proof.py  ACTIVATE_BRAIN.py  ADVANCED_CAPABILITIES_GUIDE.md  AMOS_28_SYSTEM_HARDENING.md  AMOS_44_ITERATION_JOURNEY.md  AMOS_57_COMPLETE_SYSTEM_SUMMARY.md  AMOS_57_VALIDATION_SUMMARY.md  AMOS_5_REPO_AUTOPSY.md  AMOS_5_REPO_FIX_PLAN.md  AMOS_5_REPO_FULL_ASSESSMENT.md  AMOS_5_REPO_INTEGRATION_ARCHITECTURE.md  AMOS_5_REPO_INTEGRATION_SUMMARY.md  AMOS_6REPO_ARCHITECTURE.md  AMOS_6REPO_CONNECTION_DIAGRAM.md  AMOS_6_REPO_ARCHITECTURE.md  AMOS_6_REPO_ARCHITECTURE_GENERATED.md  AMOS_6_REPO_AUTOPSY.md  AMOS_6_REPO_INTEGRATION_PLAN.md  AMOS_6_REPO_LINKER.py  AMOS_API_CONTRACTS.md  AMOS_ARCHITECTURE_RESTRUCTURE.md  AMOS_AUTONOMOUS_GOVERNANCE_ORCHESTRATOR.py  AMOS_BRAIN_CASCADE_FINAL.py  AMOS_BRAIN_COMPLETE.md  (+1037 more)
amos_invest/: importlinter.toml  pyproject.toml
amos_platform/: README.md  __init__.py  pyproject.toml
amos_platform/api/: __init__.py  gateway.py
amos_platform/core/: __init__.py  llm_router.py
amos_platform/events/: __init__.py  bus.py
amos_universe/: README.md  pyproject.toml
clawspring/: .gitignore  AMOS_SYSTEM_COMPLETE.md  README.md  __init__.py  agent.py  amos.py  amos_biology_cognition_engine.py  amos_brain_cli.py  amos_brain_integration.py  amos_causal_inference_engine.py  amos_coding_engine.py  amos_cognitive_audit.py  amos_cognitive_bridge.py  amos_cognitive_router.py  amos_consciousness_engine.py  amos_design_engine.py  amos_design_language_engine.py  amos_econ_engine.py  amos_econ_finance_engine.py  amos_electrical_power_engine.py  amos_emotion_engine.py  amos_engineering_math_engine.py  amos_equation_integration.py  amos_ethics_safety_engine.py  amos_execution.py  amos_integration.py  amos_integration_tests.py  amos_knowledge_connector.py  amos_knowledge_graph_engine.py  amos_logic_core_engine.py  amos_logic_law_engine.py  amos_mechanical_structural_engine.py  amos_memory.py  amos_memory_optimization_engine.py  amos_monitoring.py  amos_multi_agent.py  amos_multi_agent_coordination_engine.py  amos_numerical_methods_engine.py  amos_orchestrator.py  amos_personality_engine.py  (+41 more)
clawspring/amos_brain/: .amos_cognitive_audit.jsonl  COMPLETION_MANIFEST.md  COMPLETION_MANIFEST_v2.md  LEARNING_MEMORY_KERNEL_SPEC.md  README.md  __init__.py  __main__.py  amos_kernel_runtime.py  api_gateway.py  api_integration.py  audit_exporter.py  auto_remediation_engine.py  benchmark.py  benchmark_results.json  brain_analytics_engine.py  brain_cache_optimizer.py  brain_cli.py  brain_event_integration.py  brain_event_processor.py  brain_health_diagnostics.py  brain_status.py  brain_workflow_engine.py  cognitive_audit.py  cognitive_task_processor.py  config_manager.py  dashboard.html  dashboard_server.py  deep_integration.py  demo_complete_system.py  deploy_amos.py  design_validation_engine.py  ecosystem_adapter.py  engine_executor.py  equation_validation_engine.py  ethics_integration.py  expression_translator.py  facade.py  feedback_loop.py  governance_config_manager.py  governance_integration.py  (+43 more)
clawspring/amos_memory/: code_code_analyze_task_1776150411.json  design_design_form_1776150411.json  reasoning_reasoning_1776150411.json  reasoning_reasoning_1776154931.json  reasoning_reasoning_1776155907.json  reasoning_reasoning_1776156281.json  reasoning_reasoning_1776156491.json
clawspring/demos/: make_brainstorm_demo.py  make_demo.py  make_proactive_demo.py  make_ssj_demo.py  make_telegram_demo.py
clawspring/docs/: README.CN.MD  README.DE.MD  README.ES.MD  README.FR.MD  README.JP.MD  README.KO.MD
clawspring/mcp/: __init__.py  client.py  config.py  tools.py  types.py
clawspring/memory/: __init__.py  consolidator.py  context.py  scan.py  store.py  tools.py  types.py
clawspring/multi_agent/: __init__.py  subagent.py  tools.py
clawspring/plugin/: __init__.py  loader.py  recommend.py  store.py  types.py
clawspring/skill/: __init__.py  builtin.py  executor.py  loader.py  tools.py
clawspring/task/: __init__.py  store.py  tools.py  types.py
clawspring/tests/: test_compaction.py  test_diff_view.py  test_mcp.py  test_memory.py  test_plugin.py  test_skills.py  test_subagent.py  test_task.py  test_tool_registry.py  test_voice.py
clawspring/voice/: __init__.py  keyterms.py  recorder.py  stt.py
repo_doctor/: ARCHITECTURE.md  QUICKSTART.md  README.md  __init__.py  __main__.py  activate_treesitter.py  amos_brain_integration.py  arch_demo.py  arch_invariants.py  arch_pathologies.py  architectural_digital_twin.py  architecture.py  autonomous_governance.py  bisect_engine.py  brain_architecture_analyzer.py  causal_architecture_engine.py  cli.py  collapse.py  constants.py  constitutional_architecture_engine.py  contracts.py  entanglement.py  entrypoints.py  explanatory_engine.py  fast_document_reader.py  fleet.py  graph_substrate.py  history.py  import_analyzer.py  invariants_legacy.py  layer18_physics_engine.py  layer19_meta_pathology.py  meta_cognitive_reflection.py  meta_pathologies.py  omega_cli.py  omega_infinity.py  operational_architecture_engine.py  packaging.py  persistence.py  predictive_engine.py  (+13 more)
repo_doctor/fleet/: __init__.py  batch_plan.py  fleet_state.py  shared_contracts.py
repo_doctor/graph/: __init__.py  entanglement.py  repo_graph.py  substrate.py
repo_doctor/history/: __init__.py  bisect_runner.py  drift.py  path_integral.py
repo_doctor/ingest/: __init__.py  codeql_bridge.py  joern_bridge.py  treesitter_ingest.py
repo_doctor/invariants/: __init__.py  api.py  artifact.py  authorization.py  base.py  control_systems.py  distributed_physics.py  engine.py  entrypoints.py  environment.py  history.py  imports.py  meta_pathology.py  migration.py  observability.py  packaging.py  parse.py  performance.py  (+7 more)
(+1806 files in other folders)
