[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amos-brain"
version = "14.0.0"
description = "AMOS Brain Cognitive OS vInfinity - 14-layer deterministic cognitive architecture for AI agents with structured reasoning, law enforcement (L1-L6), and multi-agent orchestration."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Trang Phan (Trang Q. Phan)", email = "trang@amos-project.dev"}
]
keywords = [
    "ai",
    "cognitive-architecture",
    "field-theoretic-programming",
    "multi-substrate-computation",
    "mathematical-regime",
    "lagrangian-dynamics",
    "category-theory",
    "modal-logic",
    "information-geometry",
    "quantum-computing",
    "biological-computing",
    "verified-computation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
clawspring = ["clawspring"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pyright>=1.1.350",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
amos-brain = "amos_brain_launcher:main"
amos-tutorial = "amos_brain_tutorial:main"
amos-cli = "amos_brain_cli:main"
amosl = "amosl.cli:main"

[project.urls]
Homepage = "https://github.com/trangyp/AMOS-Code"
Documentation = "https://github.com/trangyp/AMOS-Code/blob/main/AMOS_BRAIN_GUIDE.md"
Repository = "https://github.com/trangyp/AMOS-Code"

[tool.setuptools]
include-package-data = true
py-modules = [
    "amos",
    "amos_clawspring",
    "amos_mcp_server",
    "demo_amos_brain",
    "amos_brain_launcher",
    "amos_brain_tutorial",
    "amos_brain_cli",
]

[tool.setuptools.packages.find]
include = ["amos_brain", "amos_brain.*", "amosl", "amosl.*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
amos_brain = ["*.json", "*.md", "**/*.json", "**/*.md"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "C90", # mccabe (complexity)
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D205",  # Missing blank line after summary
    "D401",  # Non-imperative mood
    "S101",  # Use of assert detected
    "S311",  # Pseudo-random generators (acceptable for non-crypto)
    "E402",  # Module level import not at top of file (intentional for sys.path.insert patterns)
    "F401",  # Unused import (intentional for optional dependency checking)
    "E501",  # Line too long (style issue)
    "SIM102", # collapsible-if (style issue)
    "E741",  # Ambiguous variable name (style issue)
    "N806",  # Non-lowercase variable in function (style issue)
    "UP017", # datetime-timezone-utc (requires Python 3.11+, target is 3.9)
    "UP045", # non-pep604-annotation-optional (style issue)
    "UP028", # yield-in-for-loop (style issue)
    "E722",  # bare-except (style issue)
    "UP031", # printf-string-formatting (style issue)
    "UP035", # deprecated-import (style issue)
    "B007",  # unused-loop-control-variable (style issue)
    "UP007", # non-pep604-annotation-union (style issue)
    "UP015", # redundant-open-modes (style issue)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["amos_brain", "amosl"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "F401"]
"*_test.py" = ["E402", "F401"]
"test_*.py" = ["E402", "F401"]
"workflow_engine.py" = ["F401"]
"*_kernel.py" = ["E402"]
"ACTIVATE_BRAIN.py" = ["E402"]
"AMOS_BRAIN_CASCADE_FINAL.py" = ["E402"]
"CASCADE_BRAIN_HOOK.py" = ["E402"]
"_AMOS_BRAIN/**/*.py" = ["E402", "F401"]
"amos_*.py" = ["E402", "F401"]
"backend/**/*.py" = ["E402", "F401"]
"clawspring/**/*.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    "tests",
    "venv",
    ".venv",
    "__pycache__",
]

[tool.pyright]
include = ["."]
exclude = [
    "**/tests",
    "**/venv",
    "**/.venv",
    "**/__pycache__",
    "**/build",
    "**/dist",
]
pythonVersion = "3.9"
strict = [
    "*",
]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["amos_brain", "amosl", "amos"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/venv/*",
    "*/__pycache__/*",
    "*.pyc",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
