[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amos"
version = "3.0.0"
description = "AMOS - Absolute Meta Operating System by Trang Phan: The Deterministic Cognitive OS with 14 Layers, 6 Global Laws, and Full Transparency"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
voice  = ["sounddevice"]
vision = ["Pillow"]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "pydantic>=2.0.0"]

[project.scripts]
clawspring = "amos:main"
amos = "amos_brain.__main__:main"
amos-validate = "amos_brain.system_validator:validate_system"
amos-unified = "amos_brain.unified_cli:main"
amos-api = "amos_brain.api_gateway:main"
amos-test = "amos_brain.test_integration_suite:main"

[tool.setuptools]
py-modules = [
    "amos",
    "agent",
    "cloudsave",
    "compaction",
    "config",
    "context",
    "providers",
    "skills",
    "subagent",
    "tool_registry",
    "tools",
]
packages = ["mcp", "memory", "multi_agent", "plugin", "skill", "task", "voice", "amos_brain"]
